# Index-UI

./: .env  .gitignore  Cargo.toml  Rocket.toml  dump.rdb  tasks.txt
.github/workflows/: rust.yml
archive/: c.txt  maina.txt
migrations/2024-03-02-111458_destino_users/: down.sql  up.sql
src/: comp.rs  main.rs  rough.rs  schema.rs
src/menu/: cache.rs  excel.rs  knubs.rs  mod.rs  models.rs  search.rs  zip.rs
src/menu/db/: cursor.rs
src/tests/: excel_test.rs  main_test.rs  mod.rs  session_test.rs
static/: main.css  main.css.map  main.js  main.scss  redux.css  redux.css.map  redux.scss  their.js
templates/: index.html.tera  main.html
