[package]
name = "one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json","secrets"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
calamine = { version = "0.22.1", features = ["chrono"] }
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4"] }
rayon = "1.8.0"
serde_json = "1.0.108"
redis = { version = "0.24.0", features = ["tokio-native-tls-comp"] }
zip = "0.6.6"
rust_xlsxwriter = { version = "0.56.0", features = ["chrono"] }
shuttle-rocket = "0.34.1"
shuttle-runtime = "0.34.1"
thiserror = "1.0.50"
chrono = { version = "0.4.31", features = ["serde"] }


